--- a/pro1.css
+++ b/pro1.css
@@ -14,6 +14,9 @@ body {
     padding: 15px;
     text-align: center;
     /* margin-bottom: 100px;  */
+    background-image: url(2623875.jpg);
+    margin: 0;
+    padding: auto;
 }
 
 .navbar ul {
@@ -29,7 +32,7 @@ body {
 }
 
 .navbar ul li a {
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
